--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </tr>
     </table>
     <hr>
+    <h3>Sobre mim</h3>
     <p>Estou em busca da minha primeira oportunidade na área que eu tanto
         amo e me empenho, para que eu possa pôr em prática todas as
         habilidades desenvolvidas durante os meus anos de estudo.
@@ -26,6 +27,17 @@
         Habilidades interpessoais e a paixão por aprender são as minhas
         principais características.</p>
     <hr>
+    <h3>Formação</h3>
+    <h4>2021 - Formação Prevista para 2023</h4>
+    <p>Universidade Paulista (UNIP) - Técnologo em Análise e Desenvolvimento de Sistemas</p>
+    <hr>
+    <h3>Hobbies</h3>
+    <p>Eu sou um nerd de tecnologia e não tenho vergonha em dizer, quando
+        não estou lendo sobre, estou dizendo para as pessoas o quanto é
+        incrível, gosto muito de jogos de computador, assistir Netflix e ficar
+        com a minha familia e amigos nos finais de semana.</p>
+        <hr>
+        <h3>Cursos Já Feitos</h3>
     <table cellspacing="15">
         <thead>
             <tr>
@@ -48,27 +60,55 @@
         </tbody>
     </table>
     <hr>
-    <h3>Skills</h3>
+    <h3>Hard Skills</h3>
     <table cellspacing="10">
         <tbody>
             <tr>
                 <td>HTML</td>
-                <td>⭐⭐⭐⭐⭐</td>
+                <td>⭐⭐⭐⭐</td>
+                <td>Node.js</td>
+                <td>⭐⭐⭐</td>
             </tr>
             <tr>
                 <td>CSS</td>
+                <td>⭐⭐⭐⭐</td>
+                <td>React</td>
                 <td>⭐⭐⭐</td>
             </tr>
             <tr>
                 <td>JavaScript</td>
-                <td>⭐⭐</td>
+                <td>⭐⭐⭐⭐</td>
+                <td>MongoDB</td>
+                <td>⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td>MySQL</td>
+                <td>⭐⭐⭐⭐</td>
+                <td>Bootstrap</td>
+                <td>⭐⭐⭐</td>
             </tr>
         </tbody>
     </table>
     <hr>
-
-    <a href="hobbies.html">Hobbies</a>
-    <a href="contato.html">Contato</a>
+    <h3>Soft Skills</h3>
+    <table cellspacing="15">
+        <tbody>
+            <tr>
+                <td>Resolução de Problemas</td>
+                <td>Boa Comunicação</td>
+            </tr>
+            <tr>
+                <td>Trabalho em Equipe</td>
+                <td>Perfil Criativo</td>
+            </tr>
+            <tr>
+                <td>Proatividade</td>
+                <td>Atento aos Detalhes</td>
+            </tr>
+        </tbody>
+    </table>
+    <hr>
+    <h3><a href="contato.html">Contato</a></h3>
 </body>
 
 </html>
