Mudei a foto de perfil do site

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-        <td><img src="imagens/Foto-modified (1).png" alt="foto de perfil"></td>
+        <td><img src="imagens/fotodeperfil-modified (1).png" alt="foto de perfil"></td>
         <td><h1>Fernando Carlos Lemos
             <h2>Web Developer</h2>
             </h1>
